添加超链接

--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -1,31 +1,42 @@
 ![56601a966466b](https://cdn.jsdelivr.net/gh/haoyutc/cos@main/uPic/20210609/56601a966466b.jpg)
 
-视频：IINA
+视频：[IINA](https://iina.io/)
 
 
 
-写作：Typora
+写作：[Typora](https://typora.io/)
 
 
 
-图片上传图床：uPic
+图片上传图床：[uPic](https://github.com/gee1k/uPic)
 
 
 
-剪切板：**Alfred**
+剪切板：**[Alfred](https://macwk.com/soft/alfred-4)**
+
+简单配置如下：
+
+![dqKhTm](https://cdn.jsdelivr.net/gh/haoyutc/cos@main/uPic/20210609/dqKhTm.png)
+
+![vdBBro](https://cdn.jsdelivr.net/gh/haoyutc/cos@main/uPic/20210609/vdBBro.png)
+
+画图：**[drawio](https://www.diagrams.net/)**、**[xmind](https://www.xmind.cn/)**
 
 
 
-画图：**drawio**、**xmind**
+编辑器：**[atom](https://atom.io/)**
 
 
 
-编辑器：**atom**
-
-
-
-离线文档浏览器：**Dash**
+离线文档浏览器：**[Dash](https://kapeli.com/dash)**
 
 
 
 谷歌浏览器插件：**Adblock plus**、**motentum**、**GitHub pocket**、**SwitchyOmega**、**JSON viewer pro**、**FireShot**、**Redirector**
+
+
+
+终端神器：iTerm2 
+
+[iTerm2]: https://vincef0ng.cn/post/iterm2-for-mac-tutorial/	"iTerm2 + Oh My Zsh 配置 MacOS 超级终端"
+
