伪造地址：fake address generator

--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -40,3 +40,11 @@
 
 [iTerm2]: https://vincef0ng.cn/post/iterm2-for-mac-tutorial/	"iTerm2 + Oh My Zsh 配置 MacOS 超级终端"
 
+
+
+伪造地址：fake address generator
+
+[fake address generator]: https://www.fakeaddressgenerator.com/	"如何伪造你想要的地址？"
+
+
+
