解决引用无效

--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -36,13 +36,13 @@
 
 
 
-终端神器：iTerm2 
+终端神器：[iTerm2](https://vincef0ng.cn/post/iterm2-for-mac-tutorial/) 
 
 [iTerm2]: https://vincef0ng.cn/post/iterm2-for-mac-tutorial/	"iTerm2 + Oh My Zsh 配置 MacOS 超级终端"
 
 
 
-伪造地址：fake address generator
+伪造地址：[fake address generator](https://www.fakeaddressgenerator.com/ )
 
 [fake address generator]: https://www.fakeaddressgenerator.com/	"如何伪造你想要的地址？"
 
