解决引用无效

--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -1,4 +1,8 @@
+【沉淀】汇集Mac使用过程中包括不仅限于很好很实用的工具，工欲善其事，必先利其器！
+
 ![56601a966466b](https://cdn.jsdelivr.net/gh/haoyutc/cos@main/uPic/20210609/56601a966466b.jpg)
+
+
 
 视频：[IINA](https://iina.io/)
 
