--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -6,17 +6,35 @@
 
 视频：[IINA](https://iina.io/)
 
+```bash
+brew install --cask iina
+```
+
 
 
 写作：[Typora](https://typora.io/)
+
+```bash
+brew install --cask typora
+```
 
 
 
 图片上传图床：[uPic](https://github.com/gee1k/uPic)
 
+```bash
+brew install --cask upic
+```
+
 
 
 剪切板：**[Alfred](https://macwk.com/soft/alfred-4)**
+
+```bash
+brew install --cask alfred
+```
+
+
 
 简单配置如下：
 
@@ -26,13 +44,40 @@
 
 画图：**[drawio](https://www.diagrams.net/)**、**[xmind](https://www.xmind.cn/)**
 
+```bash
+brew install --cask drawio
+brew install --cask xmind
+```
+
 
 
 编辑器：**[atom](https://atom.io/)**
 
+```bash
+brew install --cask atom
+```
+
 
 
 离线文档浏览器：**[Dash](https://kapeli.com/dash)**
+
+```bash
+brew install dash
+```
+
+
+
+host切换：[switchhosts](https://oldj.github.io/SwitchHosts/)/[utools](https://u.tools/index.html)
+
+```bash
+switchhosts
+brew install --cask switchhosts
+
+utools
+brew install --cask utools
+```
+
+
 
 
 
@@ -41,6 +86,12 @@
 
 
 终端神器：[iTerm2](https://vincef0ng.cn/post/iterm2-for-mac-tutorial/) 
+
+```bash
+brew install --cask iterm2
+```
+
+
 
 [iTerm2]: https://vincef0ng.cn/post/iterm2-for-mac-tutorial/	"iTerm2 + Oh My Zsh 配置 MacOS 超级终端"
 
