--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -55,6 +55,8 @@ brew install --cask xmind
 
 ```bash
 brew install --cask atom
+plugins:
+Sublime Style Column Selection
 ```
 
 
@@ -100,6 +102,22 @@ brew install --cask iterm2
 伪造地址：[fake address generator](https://www.fakeaddressgenerator.com/ )
 
 [fake address generator]: https://www.fakeaddressgenerator.com/	"如何伪造你想要的地址？"
+
+
+
+产品原型：[Axure](https://www.axure.com/)
+
+```shell
+brew install --cask axure-rp
+```
+
+> Axure PR9
+>
+> Licensee:
+> Freecrackdownload.com
+>
+> Key:
+> 5vYpJgQZ431X/G5kp6jpOO8Vi3TySCBnAslTcNcKkszfPH7jaM4eKM8CrALBcEC1
 
 
 
