照片/图片素材

--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -4,7 +4,7 @@
 
 
 
-视频：[IINA](https://iina.io/)
+***视频：***[IINA](https://iina.io/)
 
 ```bash
 brew install --cask iina
@@ -12,7 +12,7 @@ brew install --cask iina
 
 
 
-写作：[Typora](https://typora.io/)
+***写作：***[Typora](https://typora.io/)
 
 ```bash
 brew install --cask typora
@@ -20,7 +20,7 @@ brew install --cask typora
 
 
 
-图片上传图床：[uPic](https://github.com/gee1k/uPic)
+***图片上传图床：***[uPic](https://github.com/gee1k/uPic)
 
 ```bash
 brew install --cask upic
@@ -28,7 +28,7 @@ brew install --cask upic
 
 
 
-剪切板：**[Alfred](https://macwk.com/soft/alfred-4)**
+***剪切板：*****[Alfred](https://macwk.com/soft/alfred-4)**
 
 ```bash
 brew install --cask alfred
@@ -42,7 +42,9 @@ brew install --cask alfred
 
 ![vdBBro](https://cdn.jsdelivr.net/gh/haoyutc/cos@main/uPic/20210609/vdBBro.png)
 
-画图：**[drawio](https://www.diagrams.net/)**、**[xmind](https://www.xmind.cn/)**
+
+
+***画图：*****[drawio](https://www.diagrams.net/)**、**[xmind](https://www.xmind.cn/)**
 
 ```bash
 brew install --cask drawio
@@ -51,7 +53,7 @@ brew install --cask xmind
 
 
 
-编辑器：**[atom](https://atom.io/)**
+***编辑器：*****[atom](https://atom.io/)**
 
 ```bash
 brew install --cask atom
@@ -61,7 +63,7 @@ Sublime Style Column Selection
 
 
 
-离线文档浏览器：**[Dash](https://kapeli.com/dash)**
+***离线文档浏览器：*****[Dash](https://kapeli.com/dash)**
 
 ```bash
 brew install dash
@@ -69,7 +71,7 @@ brew install dash
 
 
 
-host切换：[switchhosts](https://oldj.github.io/SwitchHosts/)/[utools](https://u.tools/index.html)
+***host切换：***[switchhosts](https://oldj.github.io/SwitchHosts/)/[utools](https://u.tools/index.html)
 
 ```bash
 switchhosts
@@ -83,11 +85,11 @@ brew install --cask utools
 
 
 
-谷歌浏览器插件：**Adblock plus**、**motentum**、**GitHub pocket**、**SwitchyOmega**、**JSON viewer pro**、**FireShot**、**Redirector**
+***谷歌浏览器插件：*****Adblock plus**、**motentum**、**GitHub pocket**、**SwitchyOmega**、**JSON viewer pro**、**FireShot**、**Redirector**
 
 
 
-终端神器：[iTerm2](https://vincef0ng.cn/post/iterm2-for-mac-tutorial/) 
+***终端神器：***[iTerm2](https://vincef0ng.cn/post/iterm2-for-mac-tutorial/) 
 
 ```bash
 brew install --cask iterm2
@@ -99,13 +101,13 @@ brew install --cask iterm2
 
 
 
-伪造地址：[fake address generator](https://www.fakeaddressgenerator.com/ )
+***伪造地址：***[fake address generator](https://www.fakeaddressgenerator.com/ )
 
 [fake address generator]: https://www.fakeaddressgenerator.com/	"如何伪造你想要的地址？"
 
 
 
-产品原型：[Axure](https://www.axure.com/)
+***产品原型：***[Axure](https://www.axure.com/)
 
 ```shell
 brew install --cask axure-rp
@@ -119,8 +121,15 @@ brew install --cask axure-rp
 > Key:
 > 5vYpJgQZ431X/G5kp6jpOO8Vi3TySCBnAslTcNcKkszfPH7jaM4eKM8CrALBcEC1
 
+⚠️a xu re密钥10已经不可用，10已经是订阅模式
 
 
-微信公众号 Markdown 编辑器:[online-markdown](https://md.openwrite.cn/)
 
-online-markdown github:https://github.com/dyc87112/online-markdown
+***微信公众号 Markdown 编辑器***: [online-markdown](https://md.openwrite.cn/)
+
+***online-markdown github:***  https://github.com/dyc87112/online-markdown
+
+
+
+***照片/图片素材***：[Unsplash](https://unsplash.com/)	[Pexels](https://www.pexels.com/)	[Libre**Stock**](https://librestock.com/)
+
