--- a/_posts/2021-6-9-Mac实用工具.md
+++ b/_posts/2021-6-9-Mac实用工具.md
@@ -12,6 +12,14 @@ brew install --cask iina
 
 
 
+***录屏Gif：***[kap](https://getkap.co/)
+
+```bash
+brew install --cask kap
+```
+
+
+
 ***写作：***[Typora](https://typora.io/)
 
 ```bash
@@ -82,6 +90,12 @@ brew install --cask utools
 ```
 
 
+
+***网络抓包：***[wireshark](https://www.wireshark.org/)
+
+```bash
+brew install --cask wireshark
+```
 
 
 
