jdk install with mutil version

--- a/_posts/2021-07-28-【golang】面试技术点.md
+++ b/_posts/2021-07-28-【golang】面试技术点.md
@@ -48,15 +48,109 @@
 
 4、map进行有序的排序？
 
+```text
+map不能顺序读取，是因为他是无序的，想要有序读取，首先的解决的问题就是，把ｋｅｙ变为有序，所以可以把key放入切片，对切片进行排序，遍历切片，通过key取值。
+```
+
 5、结构体不加tag可以转json字符串吗？
+
+> - 如果变量`首字母小写`，则为`private`。无论如何`不能转`，因为取不到`反射信息`。
+> - 如果变量`首字母大写`，则为`public`。
+>   - `不加tag`，可以正常转为`json`里的字段，`json`内字段名跟结构体内字段`原名一致`。
+>   - `加了tag`，从`struct`转`json`的时候，`json`的字段名就是`tag`里的字段名，原字段名已经没用。
+>
+> ```go
+> type Person struct {
+> 	id    int    // 小写不加Tag
+> 	Name  string `json:"Space"` // 大写加Tag
+> 	age   int    `json:"Age"`   // 小写加Tag
+> 	Email string // 不加Tag
+> }
+> 
+> func TestJsonConv(t *testing.T) {
+> 	p := Person{
+> 		id:    111,
+> 		Name:  "zhans",
+> 		age:   23,
+> 		Email: "123@qq.com",
+> 	}
+> 	fmt.Printf("转换json前结构体内容：%+v\n", p)
+> 
+> 	pJson, _ := json.MarshalIndent(p, "", "")
+> 	//pJson, _ := json.Marshal(p)
+> 	fmt.Printf("转换json后结构体内容：%+v\n", string(pJson))
+> }
+> ```
+>
+> 结果：
+>
+> ```go
+> 转换json前结构体内容：{id:111 Name:zhans age:23 Email:123@qq.com}
+> 转换json后结构体内容：{
+> "Space": "zhans",
+> "Email": "123@qq.com"
+> }
+> ```
+>
+> ## 解释
+>
+> - 结构体里定义了四个字段，分别对应 `小写无tag`，`小写+tag`，`大写无tag`，`大写+tag`。
+> - 转为`json`后首字母`小写的`不管加不加tag`都不能`转为`json`里的内容，而`大写的`加了`tag`可以`取别名`，不加`tag`则`json`内的字段跟结构体字段`原名一致`。
 
 6、go语言t c p udp具体实现原理？
 
+
+
 7、go语言协程调度原理，协程为什么快？
+
+
 
 8、你在开发过程中遇到了什么困难以及怎么解决的？
 
+1)内存溢出，pprof
+
+**分析：**
+
+> 从大的范围着手，找到对应的服务异常，从TKE集群的监控发现，x x x服务的**内存**随着时间呈线性增长，然后服务挂掉，初步判断就是服务OOM了。
+
+**问题定位：**
+
+> 用pprof定位，在服务中添加6060监听端点，在nginx中添加路由转发到代码中配置的端口，部署到测试环境复现问题，访问：domain/debug/pprof，发现系统中有大量的goroutine阻塞着，达到了8000多个，而且还在快速增长，平时只有30～300个。
+>
+> 点击进入goroutine显示详情，可以看到，大部分goroutine都是handleStreams()产生的。找到原因了：goroutine泄漏导致内存泄漏。
+>
+> 从调用链路图，可以看到grpc.serverStreams占用较大。
+
+
+
+ **猜想：**
+
+> 考虑到x x x服务刚好在上一版本优化代码时，使用了stream流技术，怀疑是这块代码导致的。
+
+**验证问题及解决：**
+
+> 解决方式及验证：回退相关代码，再次使用100并发压测发现goroutine稳定在250左右。
+>
+> 原因分析：goroutine泄漏大概有两个场景：
+>
+> 1. channel操作阻塞导致runtime期间goroutine一直在阻塞等待；
+> 2. goroutine有死循环；
+>
+> 在grpc-go官网看到有相同的issue, https://github.com/grpc/grpc-go/issues/3728
+>
+> 因为在堆栈信息表中没有找到本地代码报错的代码行数，大概率怀疑是stream流使用方式不正确导致。
+>
+> 更新服务到问题发生环境，观察一段时间，内存平稳，稳定在一定范围内，实锤stream的锅。
+
+
+
+2)在for循环中执行了defer语句
+
+> defer 在函数退出时才能执行，在 for 执行 defer 会导致资源延迟释放。
+
 9、go语言常见算法，如：查找
+
+
 
 10、slice扩容机制？
 
