--- a/_posts/2021-08-30-macOS多版本JDK安装.md
+++ b/_posts/2021-08-30-macOS多版本JDK安装.md
@@ -80,3 +80,33 @@ $ java -version
 
 [Installing Java 8 & Java 11 on macOS BigSur with Homebrew](https://afternoondev.medium.com/installing-java-8-java-11-on-macos-bigsur-with-homebrew-2ff424f1d226)
 
+# [如何在MacOS上安装Jdk](https://javakk.com/1561.html)
+
+SET JAVA_HOME：
+
+```shell
+export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
+```
+
+
+
+Home-brew install maven jdk版本与Mac当前安装的版本不一致
+
+是由于brew install maven时会自动安装依赖的j d k版本
+
+需要手动修改JAVA_HOME
+
+```sh
+vim ~/.zshrc
+add export JAVA_HOME=""
+source ~/.zshrc
+```
+
+Mac 下查看Java home ：`/usr/libexec/java_home`
+
+安装对应版本的open j d k
+
+```bash
+brew install openjdk@8
+```
+
