--- a/_posts/2021-09-06-Redis-八股文.md
+++ b/_posts/2021-09-06-Redis-八股文.md
@@ -346,10 +346,9 @@ Redis把请求转发的逻辑放在了Smart Client中，要想使用Redis Cluste
 
 ### 2.redis的hash槽为什么是16384(2^14)个卡槽，而不是65536(2^16)个？
 
-> （1）如果槽位为65536，发送心跳信息的消息头达8k，发送的心跳包过于庞大。
-> （2）redis的集群主节点数量基本不可能超过1000个。
-> 	集群节点越多，心跳包的消息体内携带的数据越多。如果节点过1000个，也会导致网络拥堵。因此redis作者，不建议redis cluster节点数量超过1000个。 那么，对于节点数在1000以内的redis cluster集群，16384个槽位够用了。没有必要拓展到65536个。
-> （3）槽位越小，节点少的情况下，压缩率高。
+> 1. **心跳包可能会太大导致网络阻塞**。redis 集群是使用 gossip 流言协议，类似于病毒扩散的形式传播各个节点的信息达到最终一致的。假设槽位设置到了最大，如果一个节点刚好都用到了这些槽位，会导致心跳包达到了 8K，在集群内如果进行传播会导致网络阻塞（1W6 转换成心跳包的大小刚好是 2K，拉满哈希槽的时候就是 8K）
+> 2. **集群总节点数在大多数场景不会超过 1K个**。假设在极端的场景有 1K 个节点，1W6 的哈希槽位也足以应对
+> 3. **提高 gossip 流言协议的传播效率**。每个节点都会保存自己用到的哈希槽的 bitmap，在基于流言协议大范围传播节点信息时，会「哈希槽/节点数」的压缩，如果槽位很多的话压缩比率就高，传播节点信息的效率就会高起来
 
 ### 3.集群配置
 
@@ -480,3 +479,12 @@ Jedis为Redis Cluster提供了Smart客户端，也就是JedisCluster类。JedisC
 > #延迟计算公式： DELAY = 500ms + random(0 ~ 500ms) + SLAVE_RANK * 1000ms
 >
 > SLAVE_RANK表示此slave已经从master复制数据的总量的rank。Rank越小代表已复制的数据越新。这种方式下，持有最新数据的slave将会首先发起选举（理论上）。
+
+
+
+## References
+
+[1]: https://www.huaweicloud.com/articles/38e2316d01880fdbdd63d62aa26b31b4.html
+[2]: https://www.cnblogs.com/crazymakercircle/p/14282108.html#autoid-h2-0-0-0
+[3]: http://www.ttlsa.com/redis/redis-cluster-theoretical-knowledge/
+
