--- a/_posts/2021-6-9-工作中的实用工具.md
+++ b/_posts/2021-6-9-工作中的实用工具.md
@@ -152,3 +152,8 @@ brew install --cask axure-rp
 ***一个神奇的文档网站生成器:***  [docsify](https://docsify.js.org/#/zh-cn/?id=docsify)|[hugo](https://gohugo.io/)
 
 Go 学习园地：[goroadmap](http://www.topgoer.cn/)
+
+
+
+# **Parallels Desktop for Mac use windows**
+
