--- a/_posts/2021-08-17-幂等性.md
+++ b/_posts/2021-08-17-幂等性.md
@@ -96,7 +96,7 @@
 
 ① 客户端执行创建请求，调用服务端接口。
 
-② 服务端执行业务逻辑，生成一个分布式 ID，将该 ID 充当待插入数据的主键，然后执数据插入操作，运行对应的 SQL 语句。
+② 服务端执行业务逻辑，生成一个分布式 ID，将该 ID 充当待插入数据的主键，然后执行数据插入操作，运行对应的 SQL 语句。
 
 ③ 服务端将该条数据插入数据库中，如果插入成功则表示没有重复调用接口。如果抛出主键重复异常，则表示数据库中已经存在该条记录，返回错误信息到客户端。
 
@@ -167,14 +167,12 @@
 
   - 支付阶段:
 
-    - 订单系统获取到申请的**token,** 发起支付请求,
+    - 订单系统获取到申请的**token,** 发起支付请求
 
-    - 支付系统检查Redis是否存在该
-
-      token
+    - 支付系统检查Redis是否存在该token
 
       - 如果存在,表示第一次发起支付请求,删除缓存中的**token**开始支付逻辑处理
-      - 如果缓存中不存在,表示非法请求
+- 如果缓存中不存在,表示非法请求
 
 ##### 支付缓冲区
 
