--- a/_posts/2021-6-9-工作中的实用工具.md
+++ b/_posts/2021-6-9-工作中的实用工具.md
@@ -157,3 +157,8 @@ Go 学习园地：[goroadmap](http://www.topgoer.cn/)
 
 # **Parallels Desktop for Mac use windows**
 
+
+
+# [SSH 三步解决免密登录](https://blog.csdn.net/jeikerxiao/article/details/84105529)
+
+# [批量多主机节点间免密登录配置SHEEL脚本](https://www.codenong.com/cs105811186/)
