--- a/_posts/2021-07-28-【golang】面试技术点.md
+++ b/_posts/2021-07-28-【golang】面试技术点.md
@@ -451,3 +451,57 @@ Go语言中的 new 和 make 主要区别如下：
 - make 只能用来分配及初始化类型为 slice、map、chan 的数据。new 可以分配任意类型的数据；
 - new 分配返回的是指针，即类型 *Type。make 返回引用，即 Type；
 - new 分配的空间被清零。make 分配空间后，会进行初始化；
+
+#### 16、main函数之前做了哪些事情？init函数执行的一个过程？
+
+`init`函数
+go语言中`init`函数用于包`(package)`的初始化，该函数是go语言的一个重要特性。
+
+有下面的特征：
+
+```
+1 init函数是用于程序执行前做包的初始化的函数，比如初始化包里的变量等
+
+2 每个包可以拥有多个init函数
+
+3 包的每个源文件也可以拥有多个init函数
+
+4 同一个包中多个init函数的执行顺序go语言没有明确的定义(说明)
+
+5 不同包的init函数按照包导入的依赖关系决定该初始化函数的执行顺序
+
+6 init函数不能被其他函数调用，而是在main函数执行之前，自动被调用
+```
+
+`init`函数和`main`函数的异同:
+
+```
+相同点：
+	两个函数在定义时不能有任何的参数和返回值，且Go程序自动调用。
+不同点：
+    init可以应用于任意包中，且可以重复定义多个。
+    main函数只能用于main包中，且只能定义一个。
+```
+
+> 两个函数的执行顺序：
+> 对同一个go文件的`init()`调用顺序是从上到下的。
+> 对同一个`package`中不同文件是按文件名字符串比较“从小到大”顺序调用各文件中的`init()`函数。
+> 对于不同的`package`，如果不相互依赖的话，按照main包中"先import的后调用"的顺序调用其包中的`init()`，如果`package`存在依赖，则先调用最早被依赖的`package`中的`init()`，最后调用main函数。
+>
+> 如果init函数中使用了`println()`或者`print()`你会发现在执行过程中这两个不会按照你想象中的顺序执行。这两个函数官方只推荐在测试环境中使用，对于正式环境不要使用。
+
+#### 17、golang的CSP模型？
+
+
+
+Goroutine 和 channel 是 Go 语言并发编程的 两大基石。Goroutine 用于执行并发任务，channel 用于 goroutine 之间的同步、通信。
+
+Channel 在 gouroutine 间架起了一条管道，在管道里传输数据，实现 gouroutine 间的通信；由于它是线程安全的，所以用起来非常方便；channel 还提供 “先进先出” 的特性；它还能影响 goroutine 的阻塞和唤醒。
+
+相信大家一定见过一句话：
+
+> **Do not communicate by sharing memory; instead, share memory by communicating.**
+
+**不要通过共享内存来通信，而要通过通信来实现内存共享。**
+
+#### 18、Java和golang的垃圾回收算法有什么区别？为什么这么选择？
