--- a/_posts/2021-08-17-幂等性.md
+++ b/_posts/2021-08-17-幂等性.md
@@ -46,15 +46,11 @@
 
 ### 保证幂等策略
 
-- 幂等需要通过
-
-  唯一的业务单号
-
-  来保证:
+- 幂等需要通过唯一的业务单号来保证:
 
   - **相同的业务单号,认为是同一业务**
   - **使用唯一的业务单号确保:后面多次相同业务单号的处理逻辑和执行效果是一致的**
-
+  
 - 幂等实现示例-支付:
 
   - 先查询订单是否支付过
@@ -171,7 +167,8 @@
 
     - 支付系统检查Redis是否存在该token
 
-      - 如果存在,表示第一次发起支付请求,删除缓存中的**token**开始支付逻辑处理
+      如果存在,表示第一次发起支付请求,删除缓存中的**token**开始支付逻辑处理
+  
 - 如果缓存中不存在,表示非法请求
 
 ##### 支付缓冲区
