--- a/_posts/2021-09-06-Redis-八股文.md
+++ b/_posts/2021-09-06-Redis-八股文.md
@@ -344,7 +344,7 @@ Redis把请求转发的逻辑放在了Smart Client中，要想使用Redis Cluste
 
 >  缓存热点问题：一致性哈希算法在节点太少时，容易因为数据分布不均匀而造成缓存热点的问题。一致性哈希算法可能集中在某个hash区间内的值特别多，会导致大量的数据涌入同一个节点，造成master的热点问题(如同一时间20W的请求都在某个hash区间内)。
 
-### 2.redis的hash槽为什么是16384(2^14)个卡槽，而不是65536(2^16)个？
+### 2.redis的hash槽为什么是16384(2^14) 个卡槽，而不是65536(2^16)个？
 
 > 1. **心跳包可能会太大导致网络阻塞**。redis 集群是使用 gossip 流言协议，类似于病毒扩散的形式传播各个节点的信息达到最终一致的。假设槽位设置到了最大，如果一个节点刚好都用到了这些槽位，会导致心跳包达到了 8K，在集群内如果进行传播会导致网络阻塞（1W6 转换成心跳包的大小刚好是 2K，拉满哈希槽的时候就是 8K）
 > 2. **集群总节点数在大多数场景不会超过 1K个**。假设在极端的场景有 1K 个节点，1W6 的哈希槽位也足以应对
@@ -440,7 +440,7 @@ Redis把请求转发的逻辑放在了Smart Client中，要想使用Redis Cluste
 
 当数据过多，集群节点较多时，客服端大多数请求都会发生重定向，每次重定向都会产生一次无用的请求，严重影响了redis的性能。如果客户端在请求时就知道由哪个节点负责管理哪个槽，再将请求打到对应的节点上，那就有效的解决了这个问题。
 
-提高redis的性能，避免大部分请求发生重定向，可以使用**智能客户端**。智能客户端知道由哪个节点负责管理哪个槽，而且某个当节点与槽的映射关系发生改变时，客户端也会进行响应的更新，这是一种非常高效的请求方式。
+提高redis的性能，避免大部分请求发生重定向，可以使用**智能客户端**。智能客户端知道由哪个节点负责管理哪个槽，而且当某个节点与槽的映射关系发生改变时，客户端也会进行响应的更新，这是一种非常高效的请求方式。
 
 Jedis为Redis Cluster提供了Smart客户端，也就是JedisCluster类。JedisCluster会从集群中选一个可运行的节点，使用 cluster slots 初始化槽和节点映射，将映射关系保存到本地，为每个节点创建JedisPool，相当于为每个redis节点都设置一个JedisPool，然后就可以进行数据读写操作。
 
@@ -453,7 +453,7 @@ Jedis为Redis Cluster提供了Smart客户端，也就是JedisCluster类。JedisC
 - 3.如果目标节点出现连接出错(说明节点的slot->node的映射有更新)，客户端将随机找个活跃节点，向其发送命令，大概率会得到 moved异常，然后根据moved响应更新 slot 和 node 的映射关系，再向新的目标节点发送命令。
 - 如果这样的情况连续出现 5 次未找到目标节点，则抛出异常：Too many cluster redirection！。
 
-**总结：**mart智能客户的目标：追求性能。避免了大量请求的moved重定向操作，在数据量和请求量大的环境下，极高的提升了redis性能。
+**总结：**smart智能客户的目标：追求性能。避免了大量请求的moved重定向操作，在数据量和请求量大的环境下，极高的提升了redis性能。
 
 ### 6.Redis Cluster主从选举
 
