--- a/_posts/2021-6-9-工作中的实用工具.md
+++ b/_posts/2021-6-9-工作中的实用工具.md
@@ -42,7 +42,7 @@ brew install --cask upic
 brew install --cask alfred
 ```
 
-
+https://macwk.com/soft/alfred-4
 
 简单配置如下：
 
@@ -162,3 +162,13 @@ Go 学习园地：[goroadmap](http://www.topgoer.cn/)
 # [SSH 三步解决免密登录](https://blog.csdn.net/jeikerxiao/article/details/84105529)
 
 # [批量多主机节点间免密登录配置SHEEL脚本](https://www.codenong.com/cs105811186/)
+
+
+
+## [iterm2上传文件到linux,远程上传下载的几种姿势：Mac 上 iTerm 应用技巧](https://www.cxyzjd.com/article/weixin_42542420/116616131)
+
+> 配置详见：https://github.com/aikuyun/iterm2-zmodem
+>
+> 上传：定位到某一目标机目录，输入“rz”，即会弹出本地文件选择框，将你选择的文件上传。
+>
+> 下载：定位到目标机目录，输入“sz filename1 filename2 … filenameN”，即会弹出本地选择框，你选择一个本地目录之后，文件将下载到该目录中。
