feat: 新增idea plugin

--- a/_posts/2021-6-9-工作中的实用工具.md
+++ b/_posts/2021-6-9-工作中的实用工具.md
@@ -172,3 +172,11 @@ Go 学习园地：[goroadmap](http://www.topgoer.cn/)
 > 上传：定位到某一目标机目录，输入“rz”，即会弹出本地文件选择框，将你选择的文件上传。
 >
 > 下载：定位到目标机目录，输入“sz filename1 filename2 … filenameN”，即会弹出本地选择框，你选择一个本地目录之后，文件将下载到该目录中。
+
+
+
+## Mac动态屏保
+
+**SaveHollywood** 可自己定义动画内容
+
+**Fliqlo** 数字时钟简洁屏保
